--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.21.4"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.10",
     "prisma": "^4.11.0",
     "typescript": "^5.0.2"
