--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "express-neu",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,8 +22,9 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.15.10",
-    "prisma": "^4.11.0",
+    "@types/node": "^18.15.11",
+    "prisma": "^4.12.0",
     "typescript": "^5.0.2"
-  }
+  },
+  "description": ""
 }
