--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node --transpile-only src/index.ts"
+    "start": "ts-node --transpile-only src/index.ts",
+    "dev": "ts-node-dev src/index.ts",
+    "test": "mocha -r ts-node/register src/tests/*.test.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +21,13 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.4",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "prisma": "^4.12.0",
     "typescript": "^5.0.2"
   },
