--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,9 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mindee": "^3.7.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.21.4"
@@ -25,11 +28,12 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "prisma": "^4.12.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.4"
   },
   "description": ""
 }
