--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   image_picker: ^0.8.7+1
   dio: ^5.1.1
   intl: ^0.18.0
+  permission_handler: ^10.2.0
+  camera: ^0.10.4
 
 dev_dependencies:
   flutter_test:
