--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.18.0
   permission_handler: ^10.2.0
   camera: ^0.10.4
+  google_fonts: ^4.0.3
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
