--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   camera: ^0.10.4
   google_fonts: ^4.0.3
   hexcolor: ^3.0.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
