--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,13 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.7+1
   dio: ^5.1.1
-  intl: ^0.18.0
+  intl:  ^0.17.0-nullsafety.2
   permission_handler: ^10.2.0
   camera: ^0.10.4
   google_fonts: ^4.0.3
