--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   hexcolor: ^3.0.1
   fl_chart: ^0.61.0
   provider: ^6.0.5
+  flutter_cached_pdfview: ^0.4.1
+  control_style: ^0.0.3
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/pdf/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
