--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,14 @@
     "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "image-to-pdf": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "mindee": "^3.7.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
+    "pdfkit": "^0.13.0",
+    "sharp": "^0.32.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.21.4"
@@ -26,6 +30,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.4",
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
     "@types/multer": "^1.4.7",
