--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@types/mocha": "^10.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
+    "@types/pdfkit": "^0.12.9",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "prisma": "^4.12.0",
