update intl in pubsepc.yaml

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.7+1
   dio: ^5.1.1
-  intl: ^0.17.0-nullsafety.2
   permission_handler: ^10.2.0
   camera: ^0.10.4
   google_fonts: ^4.0.3
@@ -52,6 +51,7 @@ dependencies:
   path_provider: ^2.0.14
   file_picker: ^5.2.10
   pdf: ^3.10.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -107,3 +107,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
