--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,12 +38,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.7+1
   dio: ^5.1.1
+  intl: ^0.18.0
   permission_handler: ^10.2.0
   camera: ^0.10.4
   google_fonts: ^4.0.3
   hexcolor: ^3.0.1
   fl_chart: ^0.61.0
   provider: ^6.0.5
+  dropdown_button2: ^2.1.0
   flutter_cached_pdfview: ^0.4.1
   control_style: ^0.0.3
   shared_preferences: ^2.1.0
@@ -51,8 +53,7 @@ dependencies:
   path_provider: ^2.0.14
   file_picker: ^5.2.10
   pdf: ^3.10.1
-  intl: ^0.17.0
-  currency_text_input_formatter: ^2.1.8
+  currency_text_input_formatter: ^2.1.9
 
 dev_dependencies:
   flutter_test:
@@ -105,7 +106,12 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+  
+  fonts:
+      - family: DropdownArrows
+        fonts: 
+          - asset: assets/fonts/DropdownArrows.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
