--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.7+1
   dio: ^5.1.1
-  intl: ^0.18.0
+  intl: ^0.17.0
   permission_handler: ^10.2.0
   camera: ^0.10.4
   google_fonts: ^4.0.3
@@ -53,7 +53,7 @@ dependencies:
   path_provider: ^2.0.14
   file_picker: ^5.2.10
   pdf: ^3.10.1
-  currency_text_input_formatter: ^2.1.9
+  pdf_render: ^1.3.8
 
 dev_dependencies:
   flutter_test:
