--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   file_picker: ^5.2.10
   pdf: ^3.10.1
   pdf_render: ^1.3.8
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
