add email confirm functionality

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "mindee": "^3.7.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.2",
     "path": "^0.12.7",
     "pdfkit": "^0.13.0",
     "sharp": "^0.32.0",
@@ -35,6 +36,7 @@
     "@types/mocha": "^10.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
+    "@types/nodemailer": "^6.4.7",
     "@types/pdfkit": "^0.12.9",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
