--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   email_validator: ^2.1.17
   flutter_colorpicker: ^1.0.3
   font_awesome_flutter: ^10.4.0
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
