--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -2,7 +2,7 @@ name: frontend
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.1+1
 
 environment:
-  sdk: ">=2.19.4 <3.0.0"
+  sdk: '>=2.19.4 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -60,6 +60,9 @@ dependencies:
   multi_select_flutter: ^4.1.3
   multiselect: ^0.1.0
   url_launcher: ^6.1.11
+  connectivity_plus: ^4.0.1
+  get: ^4.6.5
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
