--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mindee": "^3.7.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.2",
+    "nodemailer-express-handlebars": "^6.1.0",
     "path": "^0.12.7",
     "pdfkit": "^0.13.0",
     "sharp": "^0.32.0",
